package br.unitins.topicos1.dto;


public record AutorDTO (
    String nome,
    String bio
){


}
